VERSION 0.9.9
-------------
Release Date: ?

 - fixed a bug of cleanArray() in Peak_Model_Zendatable that let pass valid column data even if is 
   value is an array(notice array to string converstion). Now if its a valid column and data is an array,
   it will be transformed into json string automatically.
 - added array empty check in new methods _configView() and _configRouter() in Peak_Application_Bootstrap
 - fixed regression introduced in 0.9.8 >
   "fixed group by unquoted identifier of method _getData() in Peak_Model_Pagination"


VERSION 0.9.8
-------------
Release Date: 2014-02-04

 - added a new exception ERR_VIEW_ENGINE_NOT_FOUND to handle error of loading unknown view rendering engine
 - !IMPORTANT: changed the prefix of methods automatically called by Peak_Application_Bootstrap.
   Old prefix : _init  New prefix: init
 - renamed method boot to _boot() in Peak_Application_Bootstrap
 - Peak_Application_Bootstrap now handle app configs injection in Peak_View and Peak_Router.
   Added methods _configView() and _configRouter() for that purpose.
   This also mean that you can add yours own customs regex routes directly in your app config file.
 - removed method _registryConfig() in Peak_View
 - added class Peak_Controller_Action_Json
 - fixed group by unquoted identifier of method _getData() in Peak_Model_Pagination
 - fixed order by unquoted identifier of method _getData() in Peak_Model_Pagination
 - added method quoteIdentifiers() in Peak_Model_Zendatable
 - fixed variable name problem in method translate() of class Peak_Lang
 - fixed a bug in method exists() of class Peak_Model_Zendatable that occur when field key name is also a reserved word.
 - improved method addRegex() of Peak_Router by supporting quick pattern {param_name}:validator in regex. Validator are:
   :any, :negnum, :posnum, :negfloat, :posfloat, :float, :permalink, :alphanum, :alpha, :year, :month, :day. Also, those